# True-Trust-Blockchain

./: .cursor_sync_check.txt  .gitignore  ANALIZA_WYKONANA.md  ARCHITECTURE.md  BUILD.md  BULLETPROOFS_INTEGRATION.md  CODE_REVIEW.md  COMPARISON_TABLE.txt  COMPLETE_SYSTEM.md  COMPREHENSIVE_ANALYSIS.md  CONSENSUS_EXAMPLE.md  CONSENSUS_MODULE.md  CRITICAL_SECURITY_FIX.md  CRYPTO_FIXES.md  CRYPTO_REFINEMENTS.md  CRYPTO_REWRITE_COMPLETE.md  CURSOR_SYNC_ISSUE.md  Cargo.toml  DEPENDENCIES.md  DEPLOYMENT.md  DETERMINISTIC_POT.md  FALCON_KEYGEN_NOTES.md  FALCON_SEEDED_INTEGRATION.md  FALCON_SIGS_API.md  FIELD_SELECTION.md  FINAL_INTEGRATION.md  FINAL_STATUS.md  FIXES_PROPOSED.md  FIX_WEIGHT_MODEL.patch  FLOW_DIAGRAM.txt  GOLDEN_TRIO_CONSENSUS.md  GROTH16_PRODUCTION.md  HYBRID_INTEGRATION_COMPLETE.md  HYBRID_PQC_ZK_DESIGN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_FIRST.txt  INTEGRATION_SUMMARY.md  (+57 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CONSENSUS.md  CRYPTOGRAPHY.md  INTEGRATION.md  README.md  SECURITY.md
docs/archive/: ADVANCED_TRUST_MODEL.md  BULLETPROOFS_PERFORMANCE.md  CODE_REVIEW_FIXES.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FULL_CONSENSUS_BRAINSTORM.md  GUEST_CODE_ANALYSIS.md  HASH_COMPARISON.md  INTEGRATION_COMPLETE.md  KMAC_MIGRATION.md  OPTIMIZATION_GUIDE.md  PLACEHOLDERS_REMOVED.md  POT_REVIEW.md  POZS_ARCHITECTURE.md  POZS_EXAMPLE.md  POZS_LITE_INTEGRATION.md  POZS_SUMMARY.md  SHA3_KMAC_INTEGRATION.md  STATUS.md
docs/consensus/: CPU_CONSENSUS_MODEL.md  HYBRID_CONSENSUS.md  MINING_FLOW.md
docs/crypto/: BABYBEAR_FFT_FIELD.md  BULLETPROOFS_TO_STARK_MIGRATION.md  WINTERFELL_STARK.md
docs/guides/: MONERO_RANDOMX_INTEGRATION.md  QUICKSTART.md  QUICK_START.md  RANDOMX_INSTALL.md  RANDOMX_INSTALL_GUIDE.md  README_RANDOMX_FFI.md
docs/network/: FULL_PQ_STACK.md
docs/security/: QUANTUM_SECURITY_DECISION.md
docs/translations/: README_PL.md
falcon_seeded/: Cargo.toml  README.md  build.rs
falcon_seeded/c/: falcon_shim.c  randombytes_kmac.c
falcon_seeded/scripts/: setup_pqclean.sh
falcon_seeded/src/: lib.rs
guests/: README.md
guests/agg_guest/: Cargo.toml
guests/agg_guest/src/: main.rs
guests/priv_guest/: Cargo.toml
guests/priv_guest/src/: main.rs
pot80-zk-host/: Cargo.toml
pot80-zk-host/src/: lib.rs
pot80_zk_host/: Cargo.toml
pot80_zk_host/src/: consensus.rs  lib.rs  snapshot.rs
src/: bp.rs  bp_prover.rs  chain.rs  consensus.rs  consensus_pro.rs  consensus_pro_v2.rs  consensus_weights.rs  core.rs  cpu_mining.rs  cpu_proof.rs  crypto.rs  crypto_kmac.rs  crypto_kmac_consensus.rs  falcon_sigs.rs  golden_trio.rs  hybrid_commit.rs  keysearch.rs  kyber_kem.rs  lib.rs  main.rs  node.rs  node_id.rs  node_old.rs  node_v2_p2p.rs  p2p_channel.rs  p2p_secure.rs  pot.rs  pot_node.rs  pow_randomx_monero.rs  pozs.rs  pozs_groth16.rs  pozs_keccak.rs  pozs_lite.rs  pq_simple.rs  pqc_verify.rs  randomx_full.rs  rtt_pro.rs  rtt_trust.rs  rtt_trust_pro.rs  snapshot.rs  (+18 more)
src/consensus/: mod.rs  pot.rs  randao.rs  snapshot.rs  types.rs
src/crypto/: falcon_integration.rs  falcon_ops.rs  hint_transcript.rs  hints.rs  keysearch_quantum.rs  kmac.rs  kmac_drbg.rs  kmac_falcon_integration.rs  kmac_mlkem_integration.rs  mod.rs  quantum_hint_v2.rs  seeded.rs
src/network/: gossip.rs  mod.rs  peer.rs  protocol.rs
src/node/: mod.rs
src/pq/: mod.rs  tx_stark.rs
src/storage/: mod.rs
src/wallet/: keys.rs  mod.rs  pq_wallet.rs  storage.rs
src/zk/: groth16.rs  keccak_gadget.rs  mod.rs  range_stark_winterfell.rs  range_stark_winterfell_v2.rs
tests/: integration_test.rs  test_tt_priv_cli.sh  tt_priv_cli_integration.rs
tt_node/: Cargo.toml
tt_node/examples/: consensus_rewards_test.rs  e2e_demo.rs  e2e_full_test.rs  mining_demo.rs  test_all_features.rs
tt_node/src/: chain_store.rs  consensus_pro.rs  consensus_weights.rs  core.rs  crypto_kmac_consensus.rs  e2e_demo.rs  falcon_sigs.rs  golden_trio.rs  hybrid_commit.rs  kyber_kem.rs  lib.rs  main.rs  mod.rs  node_core.rs  node_id.rs  pqc_verification.rs  randomx_full.rs  range_proof_winterfell.rs  rtt_pro.rs  snapshot_pro.rs  snapshot_witness.rs  stark_full.rs  stark_security.rs  state_priv.rs  tx_stark.rs
tt_node/src/crypto/: kmac.rs  kmac_drbg.rs  mod.rs  seeded.rs
tt_node/src/p2p/: channel.rs  mod.rs  secure.rs
tt_node/src/wallet/: mod.rs  wallet_cli.rs
