[package]
name = "tt_priv_cli"
version = "5.0.0"
edition = "2021"
authors = ["TRUE_TRUST Team"]
license = "Apache-2.0"
description = "TRUE_TRUST wallet CLI v5 (PQC: Falcon512 + ML-KEM/Kyber768, AEAD: GCM-SIV/XChaCha20, KDF with pepper, Shamir M-of-N shards)"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2"
# Pin dependencies to avoid edition2024 requirement
base64ct = "=1.6.0"
curve25519-dalek = "4"
argon2 = "0.5"
dirs = "5.0"
bech32 = "0.11"
hex = "0.4"
bincode = "1.3"
sharks = "0.5"
sha3 = "0.10"  # Used for KMAC256 (SHAKE256) and guest code

# Post-Quantum Cryptography
pqcrypto-falcon = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# JSON serialization for shards
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# SHA256 for Merkle trees
sha2 = "0.10"

# Production blockchain node dependencies
tokio = { version = "1.38", features = ["full"] }
tiny-keccak = { version = "2.0", features = ["cshake", "shake"] }
merlin = "3.0"

# ZK proof system (Groth16 over BN254) - optional feature
ark-std = { version = "0.4", default-features = false, optional = true }
ark-ff = { version = "0.4", default-features = false, optional = true }
ark-ec = { version = "0.4", default-features = false, optional = true }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], optional = true }
ark-groth16 = { version = "0.4", default-features = false, optional = true }
ark-snark = { version = "0.4", default-features = false, optional = true }
rand_chacha = { version = "0.3", optional = true }
ark-relations = { version = "0.4", default-features = false, optional = true }
ark-r1cs-std = { version = "0.4", default-features = false, optional = true }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["r1cs"], optional = true }
ark-serialize = { version = "0.4", default-features = false, optional = true }

[features]
# STARK field selection (see QUANTUM_SECURITY_DECISION.md for details)
default = ["goldilocks"]  # PRODUCTION: 64-bit classical, 32-bit quantum (safe until ~2040)
babybear = []             # Demo-grade: 31-bit BabyBear field, fast (testnet only)
goldilocks = []           # Production-grade: 64-bit Goldilocks field, 2× slower (mainnet)

# ZK proof support (Groth16/BN254)
zk-proofs = [
    "ark-std/std",
    "ark-ff/std", 
    "ark-ec/std",
    "ark-bn254",
    "ark-groth16",
    "ark-snark",
    "ark-relations",
    "ark-r1cs-std/std",
    "ark-crypto-primitives/std",
    "ark-serialize/std",
    "rand_chacha"
]
# Enable RISC0 zkVM prover (requires RISC0 SDK)
risc0-prover = []

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "tt_node"
path = "src/bin/node_cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
