[package]
name = "tt_priv_cli"
version = "4.0.0"
edition = "2021"
authors = ["TRUE_TRUST Team"]
license = "Apache-2.0"
description = "TRUE_TRUST wallet CLI v4 (AEAD: GCM-SIV/XChaCha20, KDF with pepper, Shamir M-of-N shards)"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
argon2 = "0.5"
dirs = "5.0"
bech32 = "0.10"
hex = "0.4"
bincode = "1.3"
sharks = "0.6"
sha3 = "0.10"  # Used for KMAC256 (SHAKE256) and guest code
pot80-zk-host = { path = "./pot80-zk-host" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
