[package]
name = "tt_node"
version = "0.1.0"
edition = "2021"
authors = ["TRUE_TRUST Team"]
license = "Apache-2.0"
description = "TRUE_TRUST PQC node (Falcon512 + Kyber768, RandomX, STARK/Winterfell)"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["cshake", "shake"] }

# Symmetric crypto
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"

# Post-Quantum crypto
pqcrypto-falcon = "0.3"
pqcrypto-kyber  = "0.8"   # zgodne z Twoim kyber_kem.rs
pqcrypto-traits = "0.3"

# Async / networking (na później)
tokio = { version = "1.38", features = ["full"] }

# Transcript / ZK stuff
merlin = "3.0"

# Winterfell STARK
winterfell = { version = "0.13", default-features = false, features = ["std"] }
falcon_seeded = { path = "../falcon_seeded", optional = true }

[features]
default = ["winterfell_v2"]
winterfell_v2 = []
seeded_falcon = ["falcon_seeded"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
