[package]
name = "agg-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["kmac"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
